Logo partial base url

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,1 @@
-<a id="logo" href="/"><img src="/eucalyptus-doc/images/logo.png"/></a>
+<a id="logo" href="/"><img src="{{ .Site.BaseURL }}images/logo.png"/></a>
